force-app/main/default/objects/Contact/fields/Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager__c</fullName>
    <inlineHelpText>Populated by Marketo</inlineHelpText>
    <label>Account Manager</label>
    <length>255</length>
    <type>Text</type>
</CustomField>