force-app/main/default/objects/Contact/fields/Active_Subscription_Count__c.field-meta.xml
<CustomField>
    <fullName>Active_Subscription_Count__c</fullName>
    <description>use for report, Active Subscription Count from ACCOUNT</description>
    <formula>Account.Active_Subscription_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>use for report, Active Subscription Count from ACCOUNT</inlineHelpText>
    <label>Active Subscription Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>