force-app/main/default/objects/Contact/fields/Contact_Account_Zero_Id__c.field-meta.xml
<CustomField>
    <fullName>Contact_Account_Zero_Id__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Zero Account Id for this Contact</inlineHelpText>
    <label>Contact Account Zero Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>