force-app/main/default/objects/Contact/fields/Contact_Status__c.field-meta.xml
<CustomField>
    <fullName>Contact_Status__c</fullName>
    <label>Contact Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Re-Open</fullName>
            </value>
            <value>
                <fullName>Reaching Out</fullName>
            </value>
            <value>
                <fullName>Conversation</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Not Working</fullName>
            </value>
            <value>
                <fullName>Recycle</fullName>
            </value>
            <value>
                <fullName>Fake</fullName>
            </value>
            <value>
                <fullName>Trial Activated</fullName>
            </value>
            <value>
                <fullName>Trial Won</fullName>
            </value>
            <value>
                <fullName>MQL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>