force-app/main/default/objects/Contact/fields/Count_Completed_Activities__c.field-meta.xml
<CustomField>
    <fullName>Count_Completed_Activities__c</fullName>
    <label>Count Completed Activities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>