force-app/main/default/objects/Contact/fields/Count_Related_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Count_Related_Opportunities__c</fullName>
    <label>Count Related Opportunities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>