force-app/main/default/objects/Contact/fields/Created_Date_New_Customer_Date__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_New_Customer_Date__c</fullName>
    <formula>If ( 
AND(
NOT(ISNULL (Account.New_Customer_Date_Stamp__c )),
OR(
(DATEVALUE (CreatedDate) &lt; Account.New_Customer_Date_Stamp__c ),
(DATEVALUE (CreatedDate) = Account.New_Customer_Date_Stamp__c )
)
)
,TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Date &lt; New Customer Date</label>
    <type>Checkbox</type>
</CustomField>