force-app/main/default/objects/Contact/fields/Date_Conversation__c.field-meta.xml
<CustomField>
    <fullName>Date_Conversation__c</fullName>
    <description>Date stamp Status = Conversation</description>
    <inlineHelpText>Date stamp Status = Conversation</inlineHelpText>
    <label>Date - Conversation</label>
    <type>Date</type>
</CustomField>