force-app/main/default/objects/Contact/fields/Date_Open__c.field-meta.xml
<CustomField>
    <fullName>Date_Open__c</fullName>
    <description>Date Stamp Status = Open</description>
    <inlineHelpText>Date Stamp Status = Open</inlineHelpText>
    <label>Date - Open</label>
    <type>Date</type>
</CustomField>