force-app/main/default/objects/Contact/fields/Date_Re_Open__c.field-meta.xml
<CustomField>
    <fullName>Date_Re_Open__c</fullName>
    <description>Date Stamp Status = Re-Open</description>
    <inlineHelpText>Date Stamp Status = Re-Open</inlineHelpText>
    <label>Date - Re-Open</label>
    <type>Date</type>
</CustomField>