force-app/main/default/objects/Contact/fields/Date_Reaching_Out__c.field-meta.xml
<CustomField>
    <fullName>Date_Reaching_Out__c</fullName>
    <description>Date Stamp Status = Reaching Out</description>
    <inlineHelpText>Date Stamp Status = Reaching Out</inlineHelpText>
    <label>Date - Reaching Out</label>
    <type>Date</type>
</CustomField>