force-app/main/default/objects/Contact/fields/Date_Recycle__c.field-meta.xml
<CustomField>
    <fullName>Date_Recycle__c</fullName>
    <description>Date stamp Status = Recycle</description>
    <inlineHelpText>Date stamp Status = Recycle</inlineHelpText>
    <label>Date - Recycle</label>
    <type>Date</type>
</CustomField>