force-app/main/default/objects/Contact/fields/First_Campaign__c.field-meta.xml
<CustomField>
    <fullName>First_Campaign__c</fullName>
    <label>First Campaign</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BF Lära 2021</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>