force-app/main/default/objects/Contact/fields/First_Trial_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Trial_Date__c</fullName>
    <description>Set date stamp for first trial date</description>
    <inlineHelpText>Set date stamp for first trial date</inlineHelpText>
    <label>First Trial Date</label>
    <type>Date</type>
</CustomField>