force-app/main/default/objects/Contact/fields/Labels__c.field-meta.xml
<CustomField>
    <fullName>Labels__c</fullName>
    <inlineHelpText>Labels/Mærkater</inlineHelpText>
    <label>Labels</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1:a kontaktperson</fullName>
                <label>Primary Contact</label>
            </value>
            <value>
                <fullName>2:a kontaktperson</fullName>
                <label>Secondary Contact</label>
            </value>
            <value>
                <fullName>Principal</fullName>
            </value>
            <value>
                <fullName>Assitant Principal</fullName>
            </value>
            <value>
                <fullName>Clio Contact</fullName>
            </value>
            <value>
                <fullName>Super User</fullName>
            </value>
            <value>
                <fullName>Beslutningstager - Praktisk-musisk</fullName>
                <label>Decision Maker - Praktisk-musisk</label>
            </value>
            <value>
                <fullName>Beslutningstager - Kulturfagspakken</fullName>
                <label>Decision Maker - Social Studies</label>
            </value>
            <value>
                <fullName>Beslutningstager -  Matematik</fullName>
                <label>Decision Maker -  Math</label>
            </value>
            <value>
                <fullName>Beslutningstager -  Sprog</fullName>
                <label>Decision Maker -  Languages</label>
            </value>
            <value>
                <fullName>Beslutningstager -  Naturfagspakken</fullName>
                <label>Beslutningstager -  Natural Sciences</label>
            </value>
            <value>
                <fullName>No Longer Works at School</fullName>
            </value>
            <value>
                <fullName>Clio Coach</fullName>
            </value>
            <value>
                <fullName>Administratör</fullName>
            </value>
            <value>
                <fullName>Ekonomiansvarig</fullName>
            </value>
            <value>
                <fullName>Uppstartare</fullName>
            </value>
            <value>
                <fullName>DPA</fullName>
            </value>
            <value>
                <fullName>Decision maker</fullName>
                <isActive>false</isActive>
                <label>Decision maker</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>