force-app/main/default/objects/Contact/fields/Last_Trial_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Trial_Date__c</fullName>
    <description>Set date stamp for last trial date</description>
    <inlineHelpText>Set date stamp for last trial date</inlineHelpText>
    <label>Last Trial Date</label>
    <type>Date</type>
</CustomField>