force-app/main/default/objects/Contact/fields/Lead_Source_2__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_2__c</fullName>
    <label>Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inbound Call - Trial Request</fullName>
            </value>
            <value>
                <fullName>Trial Subscription</fullName>
                <label>Web Form - Trial Subscription</label>
            </value>
            <value>
                <fullName>Sales Prospecting</fullName>
            </value>
            <value>
                <fullName>Existing Customer</fullName>
            </value>
            <value>
                <fullName>Customer Event</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Price Request</fullName>
                <label>Web Form - Price Request</label>
            </value>
            <value>
                <fullName>Trade Show</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
            <value>
                <fullName>Advertisement</fullName>
            </value>
            <value>
                <fullName>Employee Referral</fullName>
                <isActive>false</isActive>
                <label>Employee Referral</label>
            </value>
            <value>
                <fullName>Google AdWords</fullName>
                <isActive>false</isActive>
                <label>Google AdWords</label>
            </value>
            <value>
                <fullName>Purchased List</fullName>
                <isActive>false</isActive>
                <label>Purchased List</label>
            </value>
            <value>
                <fullName>Website</fullName>
                <isActive>false</isActive>
                <label>Website</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>