force-app/main/default/objects/Contact/fields/Marketing_Value__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Value__c</fullName>
    <description>Use to track marketing campaign</description>
    <inlineHelpText>Use to track marketing campaign</inlineHelpText>
    <label>Marketing Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>