force-app/main/default/objects/Contact/fields/Marketo_Delete__c.field-meta.xml
<CustomField>
    <fullName>Marketo_Delete__c</fullName>
    <description>ISAE 3000 - Used to identify leads that MarCom has tagged as &quot;to delete&quot;</description>
    <label>Marketo Delete</label>
    <type>Date</type>
</CustomField>