force-app/main/default/objects/Contact/fields/mkto71_Acquisition_Program__c.field-meta.xml
<CustomField>
    <fullName>mkto71_Acquisition_Program__c</fullName>
    <description>Marketo</description>
    <label>Acquisition Program</label>
    <length>255</length>
    <type>Text</type>
</CustomField>