force-app/main/default/objects/Contact/fields/Recycled_Reason__c.field-meta.xml
<CustomField>
    <fullName>Recycled_Reason__c</fullName>
    <label>Recycled Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No longer at school</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>