force-app/main/default/objects/Contact/fields/Trial_message_from_Marketo__c.field-meta.xml
<CustomField>
    <fullName>Trial_message_from_Marketo__c</fullName>
    <description>Trial message from Marketo</description>
    <inlineHelpText>Trial message from Marketo</inlineHelpText>
    <label>Trial request portals</label>
    <length>255</length>
    <type>Text</type>
</CustomField>