force-app/main/default/objects/Contact/listViews/Linda_Stockholm_Campaign.listView-meta.xml
<ListView>
    <fullName>Linda_Stockholm_Campaign</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE3</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <filterScope>Everything</filterScope>
    <label>Linda - Stockholm Campaign</label>
    <sharedTo>
        <role>Sales_Team_SE</role>
    </sharedTo>
</ListView>