force-app/main/default/objects/Contact/listViews/My_Trials_DK_ALL.listView-meta.xml
<ListView>
    <fullName>My_Trials_DK_ALL</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.ADDRESS2_STATE</columns>
    <columns>School_Name__c</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>Trial_message_from_Marketo__c</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <columns>CONTACT.LAST_UPDATE</columns>
    <columns>Contact_Status__c</columns>
    <columns>Contact_Account_Zero_Id__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Marketo_Sync__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Trials DK - ALL</label>
    <sharedTo>
        <role>Chief_Business_Officer</role>
        <role>Sales_Management_DK</role>
        <role>Sales_Team_DK</role>
    </sharedTo>
</ListView>