force-app/main/default/objects/Contact/listViews/Price_Requests_SE_ALL.listView-meta.xml
<ListView>
    <fullName>Price_Requests_SE_ALL</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.ADDRESS2_STATE</columns>
    <columns>School_Name__c</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>Trial_message_from_Marketo__c</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>mkto71_Acquisition_Date__c</columns>
    <columns>Contact_Account_Zero_Id__c</columns>
    <columns>Last_Trial_Date__c</columns>
    <columns>First_Trial_Date__c</columns>
    <columns>CONTACT.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Marketo_Sync__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CONTACT.CURRENCY_ISO_CODE</field>
        <operation>equals</operation>
        <value>SEK</value>
    </filters>
    <filters>
        <field>Trial_message_from_Marketo__c</field>
        <operation>equals</operation>
        <value>Price request</value>
    </filters>
    <label>Price Requests SE - ALL</label>
</ListView>