force-app/main/default/objects/Contact/listViews/Prospecting_Trials.listView-meta.xml
<ListView>
    <fullName>Prospecting_Trials</fullName>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>Trial_message_from_Marketo__c</columns>
    <columns>Lead_Source_2__c</columns>
    <columns>mkto71_Lead_Score__c</columns>
    <columns>First_Trial_Date__c</columns>
    <columns>Last_Trial_Date__c</columns>
    <columns>Contact_Status__c</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>ACCOUNT.OWNER.FIRST_NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Prospect</value>
    </filters>
    <filters>
        <field>CONTACT.CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2021 12:00 AM</value>
    </filters>
    <filters>
        <field>Account.Owner_Role__c</field>
        <operation>contains</operation>
        <value>Sales Management SE,Sales Team SE,customer</value>
    </filters>
    <filters>
        <field>Account.Market__c</field>
        <operation>equals</operation>
        <value>Sweden</value>
    </filters>
    <filters>
        <field>Lead_Source_2__c</field>
        <operation>equals</operation>
        <value>Trial Subscription,Price Request</value>
    </filters>
    <label>Prospecting Trials - Sales SE</label>
</ListView>