force-app/main/default/objects/Contact/listViews/Trial_Sweden.listView-meta.xml
<ListView>
    <fullName>Trial_Sweden</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Type__c</columns>
    <columns>Active_Subscription_Count__c</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <columns>Last_Trial_Date__c</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>Contact_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Last_Trial_Date__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>CONTACT.CURRENCY_ISO_CODE</field>
        <operation>equals</operation>
        <value>SEK</value>
    </filters>
    <filters>
        <field>Contact_Status__c</field>
        <operation>notEqual</operation>
        <value>MQL,Recycle,Fake</value>
    </filters>
    <label>Trials - Sweden (ZERO Integration)</label>
    <sharedTo>
        <role>Admin</role>
    </sharedTo>
</ListView>