force-app/main/default/objects/Contact/listViews/Trials_DK_ALL.listView-meta.xml
<ListView>
    <fullName>Trials_DK_ALL</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CONTACT.ADDRESS2_STATE</columns>
    <columns>School_Name__c</columns>
    <columns>Trial_message_from_Marketo__c</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>Contact_Status__c</columns>
    <columns>Last_Trial_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Marketo_Sync__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CONTACT.CURRENCY_ISO_CODE</field>
        <operation>equals</operation>
        <value>DKK</value>
    </filters>
    <filters>
        <field>Last_Trial_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>11/15/2020</value>
    </filters>
    <filters>
        <field>Contact_Status__c</field>
        <operation>notEqual</operation>
        <value>Recycle,Rejected,Fake</value>
    </filters>
    <filters>
        <field>CONTACT.TITLE</field>
        <operation>notContain</operation>
        <value>Lærerstuderende,elev</value>
    </filters>
    <label>Trials DK - ALL</label>
    <sharedTo>
        <role>Sales_Management_DK</role>
        <role>Sales_Team_DK</role>
    </sharedTo>
</ListView>