force-app/main/default/objects/Contact/listViews/Trials_DK_Christian.listView-meta.xml
<ListView>
    <fullName>Trials_DK_Christian</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>School_Name__c</columns>
    <columns>Trial_message_from_Marketo__c</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>First_Trial_Date__c</columns>
    <columns>Last_Trial_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Marketo_Sync__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>equals</operation>
        <value>Christian</value>
    </filters>
    <label>Trials DK - Christian</label>
    <sharedTo>
        <group>Sales_Denmark</group>
    </sharedTo>
</ListView>